--- a/index.html
+++ b/index.html
@@ -4,6 +4,6 @@
     <meta HTTP-EQUIV="Refresh" CONTENT=";img/Happy Birthday.jpg">
 </head>
 <body>
-  <video src="video.mp4" autoplay preload muted ></video>
+  <video src="img/Video.mp4" autoplay preload muted ></video>
 </body>
 </html>
