--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
 <head>
     <link rel="stylesheet" href="css/video.css">
-    <meta HTTP-EQUIV="Refresh" CONTENT=";img/Happy Birthday.jpg">
+    <meta HTTP-EQUIV="Refresh" CONTENT="11;img/Happy Birthday.jpg">
 </head>
 <body>
   <video src="img/Video.mp4" autoplay preload muted ></video>
